--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "105633620+saulius334@users.noreply.github.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "9.5"
+    }
 }
